[package]
name = "exchange_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.94"
regex = "1.7.1"
once_cell = "1.17.1"
grammers-client = { features = ["markdown", "pulldown-cmark"] }
serde_yaml = "0.9.19"
grammers-session = "0.4.0"
grammers-tl-types = "0.4.0"
